<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context="dinar.dinaramanilakista_1202154318.MainActivity">
    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/identitas_pemesan"
        android:layout_gravity="center_horizontal"/>

    <EditText
        android:id="@+id/et_Name"
        android:layout_height="wrap_content"
        android:layout_gravity="center_horizontal"
        android:layout_marginTop="10sp"
        android:hint="@string/name"/>
    <EditText
        android:id="@+id/et_Phone"
        android:layout_height="wrap_content"
        android:layout_gravity="center_horizontal"
        android:layout_marginTop="10sp"
        android:inputType="phone"
        android:hint="@string/phone"/>
    <EditText
        android:id="@+id/et_Address"
        android:layout_height="wrap_content"
        android:layout_gravity="center_horizontal"
        android:layout_marginTop="10sp"
        android:hint="@string/address"/>
    <EditText
        android:id="@+id/et_Note"
        android:layout_height="wrap_content"
        android:layout_gravity="center_horizontal"
        android:layout_marginTop="10sp"
        android:hint="@string/note"/>

    <Button
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/pilih_pesanan"
        android:layout_gravity="center_horizontal"
        android:background="@color/colorPrimary"
        android:textColor="@color/colorAccent"
        android:layout_marginTop="10sp"
        android:onClick="onClickOrder"
        />
</LinearLayout>
