<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="dinar.dinaramanilakista_1202154318.MainActivity">

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="Hello World!"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <ImageView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:src="@drawable/shoecake"
        android:layout_gravity="center_horizontal" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/pilih_menu"
        android:textSize="@dimen/textSize"
        android:layout_gravity="center_horizontal"
        tools:ignore="SpUsage" />

    <RadioGroup
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center_horizontal">
    <RadioButton
        android:id="@+id/rbt_DineIn"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/dine_in"/>
        <RadioButton
            android:id="@+id/rbt_TakeAway"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/take_away"/>
    </RadioGroup>
    <Button
        android:id="@+id/btn_Order"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/pesan_sekarang"
        android:layout_gravity="center_horizontal"
        android:background="@color/colorPrimary"
        android:textColor="@color/colorAccent"
        android:onClick="onClickOrder"/>



</android.support.constraint.ConstraintLayout>
