<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="dinar.dinaramanilakista_1202154318.MainActivity">
    <LinearLayout
        android:id="@+id/ll_detailcustomer"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical">
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/detail_customer"
            android:layout_gravity="center_horizontal"/>
        <EditText
            android:id="@+id/et_DineInName"
            android:layout_height="wrap_content"
            android:layout_gravity="center_horizontal"
            android:layout_marginTop="10sp"
            android:hint="@string/name"/>
    </LinearLayout>

    <LinearLayout
        android:id="@+id/ll_table"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/ll_detailcustomer"
        android:orientation="horizontal"
        android:gravity="center_horizontal"
        android:layout_marginTop="10dp">
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/no_meja"/>
        <Spinner
            android:id="@+id/spinner_table"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content">
        </Spinner>
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/ll_table"
        android:orientation="horizontal"
        android:gravity="center_horizontal">
        <Button
            android:layout_width="wrap_content"
            android:id="@+id/pilih_pesanan"
            android:layout_height="wrap_content"
            android:gravity="center_horizontal"
            android:text="@string/pilih_pesanan"
            android:background="@color/colorPrimary"
            android:textColor="@color/colorAccent"
            android:onClick="onClickOrder"/>
    </LinearLayout>
</RelativeLayout>
